--- a/Parcial1/PeticionParametros/peticionchuk.html
+++ b/Parcial1/PeticionParametros/peticionchuk.html
@@ -11,7 +11,7 @@
     <div class="container">
         <label for="categorias">Categorias</label>
         <select id="categorias"></select>
-        <button id="ButtonBuscar">Buscar</button> <!-- Added an ID and text to the button -->
+        <button id="ButtonBuscar">Buscar</button> 
     </div>
 </body>
 </html>
