--- a/Parcial1/PeticionParametros/peticionchuk.html
+++ b/Parcial1/PeticionParametros/peticionchuk.html
@@ -8,10 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body> 
+    <!-- <h1 class="titulo">Categorias</h1> -->
     <div class="container">
-        <label for="categorias">Categorias</label>
+       <label for="categorias">Categorias</label>
         <select id="categorias"></select>
         <button id="ButtonBuscar">Buscar</button> 
+        <div id="chisteContainer"></div> <!-- div para mostrar el chiste -->
+    </div>
+    <div>
+        <img src="https://www.petlife.mx/u/fotografias/m/2023/5/24/f768x1-2331_2458_134.jpg" alt="Descripción de la imagen">
     </div>
 </body>
 </html>
