--- a/Parcial2/Formulario/index.html
+++ b/Parcial2/Formulario/index.html
@@ -7,20 +7,20 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-   
-
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.31/dist/sweetalert2.all.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.31/dist/sweetalert2.min.css" rel="stylesheet">
 
 </head>
 <body>
 
-    <div class="container">
+    <div class="formulario">
         <h1>Formulario</h1>
         <form id="myForm">
             <label for="nombre">Nombre:</label>
             <input type="text" id="nombre" name="nombre" required>
             
             <label for="edad">Edad:</label>
-            <input type="number" id="edad" name="edad" required>
+            <input type="number" id="edad" name="edad" required >
             
             <label for="juegoFavorito">Juego Favorito:</label>
             <input type="text" id="juegoFavorito" name="juegoFavorito" required>
