manejo de errores

--- a/Parcial2/EvitandoCors/index.html
+++ b/Parcial2/EvitandoCors/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="script.js"></script>
 </head>
 <body>
     <script>let funcionRetorno = function(dato) {console.log(dato)}</script>
-    <script src="http://localhost:8080/ServidorExpress?callback=funcionRetorno"></script>
 </body>
 </html>
 
@@ -24,19 +24,12 @@
 <body>
     <form target="resultado" method="get" action="http://localhost:8080/ServidorExpress">
 
-        <button type="button" id="btn">Peticion Fetch</button>
+        <button type="button" id="btn-fetch">Peticion Fetch</button>
 
-        <button type="submit" id="btn">Peticion Submit</button>
+        <button type="submit" id="btn-submit">Peticion Submit</button>
 
     </form></br>
     <iframe name="resultado"></iframe>
-    <script>
-        document.getElementById("btn").addEventListener("click", () => {
-            fetch("http://localhost:8080")
-                .then(respuesta => respuesta.json())
-                .then(dato => console.log(data))
-        })
-    </script>
 </body>
 
 </html>
