--- a/Parcial3/Swagger/index.html
+++ b/Parcial3/Swagger/index.html
@@ -10,6 +10,9 @@
 <body>
     <div class="container mt-5">
         <h1>Tabla de Usuarios</h1>
+        <ul>
+            <li><a href="http://localhost:8080/api-docs">Swagger UI</a></li>
+            <li><a href="http://localhost:8080/redoc">Redoc</a></li>
         <table class="table table-striped table-custom"> 
             <thead>
                 <tr>
